# SwiftORM

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  settings.py
examples/: run.py  settings.py
examples/blog/: models.py
examples/user_app/: models.py
swiftorm/: __init__.py  db.py
swiftorm/backends/: base.py  postgresql.py
swiftorm/cli/: main.py
swiftorm/cli/templates/: manage.py.template  settings.py.template
swiftorm/core/: exceptions.py  fields.py  models.py  query.py
tests/: conftest.py  test_core_fields.py  test_core_models.py
tests/integration/: test_constraints.py  test_foreign_key_and_cascade.py  test_full_crud_cycle.py  test_integration.py  test_mass_assignment_protection.py  test_query_engine.py  test_sql_injection.py
tests/unit/: test_core_models.py
user_app/: models.py
